# VertexOps-Pipeline

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: build-training-image.yml  ci.yml
airflow/: Dockerfile  docker-compose.yml  requirements.txt
airflow/dags/: vertexops_ingest.py
airflow/data/tmp/: resume_screening.csv
app/: __init__.py  streamlit_app.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: mart_resume_features.sql  schema.yml
dbt/models/staging/: schema.yml  stg_resume_screening.sql
jobs/: ingest_resume_screening.py
ml/: __init__.py
ml/training/: Dockerfile  __init__.py  cloudbuild.yaml  requirements.txt  train.py  trigger_cloud_build.py  vertex_launcher.py
scripts/: bootstrap.py  bootstrap_mlops_ci_cd.ps1  build_push_training_image.ps1  setup_sa.ps1  test_ingest_e2e.py
tests/: test_airflow_dag.py  test_dbt_project.py  test_ingest_resume_screening.py  test_streamlit_app.py  test_training_smoke.py
